--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import 'assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css';
 
 /** Geral **/
 body {
