Layout base concluído

--- a/src/app/view/listaShots.html
+++ b/src/app/view/listaShots.html
@@ -1,7 +1,7 @@
 <header class="topo">
   <div class="container-fluid">
     <div class="left">
-      <img src="{{dadosUsuario.avatar_url}}">
+      <!-- <img src="{{dadosUsuario.avatar_url}}"> -->
       <div class="logo">
         <img src="../../assets/img/logo.png" alt="Doroppu" title="Doroppu">
       </div>
@@ -19,3 +19,76 @@
     </div>
   </div>
 </header>
+<section id="conteudo">
+  <div class="container-fluid">
+  <ul>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+    <li>
+        <div class="thumb">
+          <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97300&w=400&h=300" alt="">
+        </div>
+        <label>texto</label>
+    </li>
+
+
+
+
+  </ul>
+</div>
+</section>
+<div id="footer">
+  <p>2017 doroppu - Jéssica Costa</p>
+</div>
