--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -12,6 +12,8 @@
 }
 
 .topo {
+    position: fixed;
+    width: 100%;
     .container-fluid {
         background-color: @cinza-claro;
         -webkit-box-shadow: 0px 2px 24px -1px @cinza-escuro;
@@ -86,4 +88,71 @@
           }
         }
     }
+}
+
+#conteudo {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  min-height: 1000px;
+  ul {
+    list-style: none;
+    .display-flex;
+    padding: 0;
+	  margin: 0;
+  	justify-content: center;
+    flex-flow: row wrap;
+    li {
+      max-width: 300px;
+      max-height: 225px;
+      margin-right: 10px;
+      margin-top: 10px;
+      overflow: hidden;
+      cursor: pointer;
+      .thumb {
+        overflow: hidden;
+        img {
+          width: 100%;
+          transition: all .2s ease-in-out;
+        }
+        &:hover {
+          img {
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            transform: scale(1.3);
+            opacity: .6;
+          }
+        }
+      }
+      label {
+        display: none;
+        position: relative;
+        bottom: 30px;
+        font-weight: bold;
+        text-transform: uppercase;
+        padding: 5px;
+      }
+      &:hover {
+        label {
+          transition: all .2s ease-in-out;
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+#footer {
+  width: 100%;
+  background: @cinza-escuro;
+  min-height: 50px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  bottom:0px;
+  text-align: center;
+  p {
+    margin-top:15px;
+    color: @base;
+  }
 }
