--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -14,6 +14,7 @@
 .topo {
     position: fixed;
     width: 100%;
+    z-index: 999;
     .container-fluid {
         background-color: @cinza-claro;
         -webkit-box-shadow: 0px 2px 24px -1px @cinza-escuro;
@@ -91,6 +92,7 @@
 }
 
 #conteudo {
+  text-align: center;
   padding-top: 100px;
   padding-bottom: 100px;
   min-height: 1000px;
@@ -102,14 +104,16 @@
   	justify-content: center;
     flex-flow: row wrap;
     li {
+      border-radius: 5px;
       max-width: 300px;
-      max-height: 225px;
+      position: relative;
       margin-right: 10px;
       margin-top: 10px;
       overflow: hidden;
       cursor: pointer;
       .thumb {
         overflow: hidden;
+        border-radius: 5px;
         img {
           width: 100%;
           transition: all .2s ease-in-out;
@@ -125,19 +129,37 @@
       }
       label {
         display: none;
-        position: relative;
-        bottom: 30px;
+        position: absolute;
+        bottom: 0px;
         font-weight: bold;
+        width: 100%;
+        margin-bottom: 0px;
         text-transform: uppercase;
         padding: 5px;
+        color: #fff;
+        background: @cinza-escuro;
       }
       &:hover {
+        -webkit-box-shadow: 0px 0px 15px -1px @cinza-claro;
+        -moz-box-shadow: 0px 0px 15px -1px @cinza-claro;
+        box-shadow: 0px 0px 15px -1px @cinza-claro;
         label {
           transition: all .2s ease-in-out;
           display: block;
         }
       }
     }
+  }
+  button {
+    background: #6ed3cf;
+    color: #ffffff;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    font-size: 15px;
+    margin-top: 25px;
   }
 }
 
