Adicionado busca por título

--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -80,6 +80,14 @@
               font-size: 25px;
           }
         }
+        &.active {
+          .fa-square {
+              color: @base;
+          }
+          .fa-square-o {
+              color: #3e3f40;
+          }
+        }
         &:hover {
           .fa-square {
               color: @base;
