--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -5,6 +5,33 @@
 @roxo: #9068be;
 @verde-agua: #6ed3cf;
 
+.border-radius (@radius: 5px) {
+	-webkit-border-radius: @radius;
+	-moz-border-radius:    @radius;
+	border-radius:         @radius;
+
+	-moz-background-clip:    padding;
+	-webkit-background-clip: padding-box;
+	background-clip:         padding-box;
+}
+.opacity (@opacity: 0.5) {
+	-webkit-opacity: 	@opacity;
+	-moz-opacity: 		@opacity;
+	opacity: 		@opacity;
+}
+.transition (@transition) {
+	-webkit-transition: @transition;
+	-moz-transition:    @transition;
+	-ms-transition:     @transition;
+	-o-transition:      @transition;
+}
+.transform(@string){
+	-webkit-transform: @string;
+	-moz-transform: 	 @string;
+	-ms-transform: 		 @string;
+	-o-transform: 		 @string;
+}
+
 .display-flex {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -135,7 +162,7 @@
           }
         }
       }
-      label {
+      .titulo-shot {
         display: none;
         position: absolute;
         bottom: 0px;
@@ -151,7 +178,7 @@
         -webkit-box-shadow: 0px 0px 15px -1px @cinza-claro;
         -moz-box-shadow: 0px 0px 15px -1px @cinza-claro;
         box-shadow: 0px 0px 15px -1px @cinza-claro;
-        label {
+        .titulo-shot {
           transition: all .2s ease-in-out;
           display: block;
         }
@@ -184,5 +211,136 @@
   p {
     margin-top:15px;
     color: @base;
+  }
+}
+
+
+
+#modal {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 998;
+  .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+		padding-top:2px;
+    display: inline-block;
+    z-index: 999;
+    width: 25px;
+    background: white;
+    text-align: center;
+    height: 25px;
+    border-radius: 3px;
+    border: 1px solid #53565b;
+    color: #53565b;
+    &:hover {
+      border: 1px solid #bcbcbc;
+      color: #848484;
+    }
+  }
+  &:after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '';
+    background: rgba(83, 86, 91, 0.62);
+    .opacity(0);
+    .transition(all ease .5s);
+  }
+  .container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    max-width: inherit;
+  }
+  .modal-conteudo {
+    position: absolute;
+    background: #fff;
+    top:50%;
+    left:50%;
+    width:100%;
+    max-width: 800px;
+    overflow: hidden;
+    .border-radius (4px);
+    .opacity(0);
+    .transition(all cubic-bezier(0.83, -0.35, 0.15, 1.48) .5s);
+    .transform(translate(-50%, -50%) scale(0.8));
+    h3 {
+        margin-bottom: 25px;
+    }
+    .topo-modal {
+      position: relative;
+      text-align: center;
+      background: #F1F1F1;
+      padding: 20px 20px 0px;
+      border-bottom: 1px solid #e9e9e9;
+      font-size: 2rem;
+      img {
+        border-radius: 50%;
+        max-width: 120px;
+      }
+      a {
+        margin-top: 10px;
+        padding: 13px 30px;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: #53565b;
+        letter-spacing: 1px;
+        font-size: 12px;
+				&.fb {
+          background: #3B5998;
+          &:hover {
+            background: lighten(#3B5998, 10%);
+          }
+        }
+        &.gp {
+          background: #d34836;
+
+          &:hover {
+            background: lighten(#d34836, 10%);
+          }
+        }
+      }
+    }
+    .descricao-shot {
+      padding-left: 25px;
+      text-align: left;
+    }
+    .status-shot {
+      margin-top: 10px;
+      padding: 10px;
+      background: #f1f1f1;
+    }
+  }
+}
+
+label {
+  cursor: pointer;
+}
+
+#showblock {
+  display: none;
+}
+
+#showblock:checked ~ #modal {
+  visibility: visible;
+
+  &:after {
+    .opacity(1);
+  }
+
+  .modal-conteudo {
+    .opacity(1);
+    .transform(translate(-50%, -50%) scale(1));
   }
 }
