README atualizado e adicionado loading

--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -5,6 +5,7 @@
 @roxo: #9068be;
 @verde-agua: #6ed3cf;
 
+/*** Funções ***/
 .border-radius (@radius: 5px) {
 	-webkit-border-radius: @radius;
 	-moz-border-radius:    @radius;
@@ -38,6 +39,7 @@
   display: flex;
 }
 
+/*** CSS Base ***/
 .topo {
     position: fixed;
     width: 100%;
