--- a/src/app/css/listaShots.less
+++ b/src/app/css/listaShots.less
@@ -277,6 +277,9 @@
     .opacity(0);
     .transition(all cubic-bezier(0.83, -0.35, 0.15, 1.48) .5s);
     .transform(translate(-50%, -50%) scale(0.8));
+		img {
+			max-width: 100%;
+		}
     h3 {
         margin-bottom: 25px;
     }
